--- a/partials/section.ejs
+++ b/partials/section.ejs
@@ -26,7 +26,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                   <div class="row no-gutters">
                     <div class="col-md-4">
-                      <img src="images/dollar2.png"class="card-img" alt="..." style="margin-top:12px">
+                      <img src="images/dollar2.jpg"class="card-img" alt="..." style="margin-top:12px">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
@@ -42,7 +42,7 @@
               <div class="card mb-3" style="max-width: 540px;">
                   <div class="row no-gutters">
                     <div class="col-md-4">
-                      <img src="images/idea2.png" class="card-img" width="20%" alt="...">
+                      <img src="images/idea2.jpg" class="card-img" width="20%" alt="...">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
