--- a/partials/subscribe.ejs
+++ b/partials/subscribe.ejs
@@ -1,6 +1,6 @@
 <section id="subscribe">
     <div>
-        <p><img src="images/subscribe.png" alt=""></p>
+        <p><img src="images/subscribe.jpg" alt=""></p>
         <h3>Stay Updated!</h3>
         <p>Subscribe to our newsletter by just providing your email id and we will notify you whenever new things go live.
         </p>
